overflow fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -40,6 +40,7 @@ body{
     align-items: flex-end;
     padding-top: 60px;
     font-size: 1.4rem;
+    overflow: hidden;
 }
 
 #buttons{
